docs: Comprehensive roadmap update with market research
- ROADMAP.md: Added phases 10-15 based on community pain points
  - Phase 10: Relationship-Aware Backup (preserve relationships when using limits)
  - Phase 11: Cascade Delete (delete record with all related children)
  - Phase 12: Scheduled Automated Backups
  - Phase 13: CLI & Automation
  - Phase 14: Advanced Data Management (field history, data masking)
  - Phase 15: Enterprise Features (metadata backup, multi-org)
  - Added competitor comparison table vs OwnBackup, Spanning, Gearset

- CHANGELOG.md: Added v3.0.0 release entry
  - Multi-platform native builds (Windows, macOS, Linux)
  - No Java required (bundled JLink runtime)
  - OAuth fix with jdk.httpserver module
  - Java 25 support

- README.md: Expanded roadmap section
  - Separated completed, coming soon, and planned features
  - Added feature descriptions for upcoming work

- docs/index.html: Major website update
  - Added Compare tab with feature comparison table
  - Updated roadmap with 7 items (complete to future)
  - Added community quote from Reddit research
  - Navigation updated with Compare link

Market research based on Reddit r/salesforce and Stack Exchange community feedback.